# C-gui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  configlibusb.sh  configure.sh  imgui.ini  main.cpp
inc/: config.h
libraries/libusb/lib/: libusb-1.0.so.0.5.0
libraries/libusb/lib/pkgconfig/: libusb-1.0.pc
